<resources>
    <string name="app_name">SQLLite</string>
    <string name="hint_name">please enter name</string>
    <string name="hint_cell">please enter cell nr</string>
    <string name="hint_id">please enter id</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_show_data">Show Data</string>
    <string name="btn_edit_data">Edit Data</string>
    <string name="btn_delete_data">Delete Data</string>
    <string name="data">Data from database will be displayed here</string>
</resources>